test/link/script-syntax-error.out
error: script-syntax-error.link(2): syntax error, unexpected ORG, expecting end of line or OPTIONAL
error: script-syntax-error.link(5): syntax error, unexpected string, expecting end of line or FLOATING or number
Linking failed with 2 errors
